# telegram-media-downloader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO-ai.md  biome.json  config.example.json  docker-compose.synology.yml  docker-compose.yml  ecosystem.config.cjs  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-faces-gpu.bat  run_safe.bat  runner.js  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.js  vitest.config.ts  vitest.workspace.ts  watchdog.ps1
.github/workflows/: ci.yml  codeql.yml  docker.yml  release-drafter.yml  release-faces-service.yml  release-seekbar-service.yml  telegram-notify.yml
apps/cli/: package.json  tsconfig.json
apps/server/: package.json  tsconfig.json
apps/web/: index.html  package.json  postcss.config.js  tsconfig.json  vite.config.ts
data/: db.sqlite-shm  db.sqlite-wal
docs/: AI.md  API.md  ARCHITECTURE.md  AUDIT.md  BACKUP.md  CLUSTER.md  DEPLOY.md  MIGRATION-v2.9-to-v2.10.md  TROUBLESHOOTING.md
faces-service/: Dockerfile  Dockerfile.arm64  Dockerfile.cuda  Makefile  README.md  build-pyinstaller.ps1  build-pyinstaller.sh  pyproject.toml  requirements-cuda.txt  requirements-directml.txt  requirements.txt  test_real_scan.py
faces-service/tests/: test_app.py  test_insight.py  test_video.py
faces-service/tgdl_faces/: __init__.py  __main__.py  app.py  clip.py  detection.py  insight.py  install.py  io.py  ocr.py
nsfw-service/: Dockerfile  Dockerfile.gpu  main.py  requirements.txt
scripts/: build-seekbar.js  calibrate-faces-eps.js  check-oom-patterns.sh  check_i18n_drift.js  clean-part-files.js  db-status.js  docker-entrypoint.sh  face-e2e-validate.js  healthcheck.js  migrate_json_to_sqlite.js  recover_groups.js  setup-dropbox.js  setup-gdrive.js  update-config.js
seekbar-service/: Dockerfile  Dockerfile.arm64  Dockerfile.cuda  Makefile  README.md  build-release.ps1  build-release.sh  docker-compose.yml  go.mod  go.sum
src/: index.js  setup.js
src/cli/: colors.js
src/config/: manager.js
src/core/: accounts.js  bot.js  connection.js  constants.js  db.js  dedup.js  deferred-delete.js  disk-rotator.js  downloader.js  faststart.js  forwarder.js  hash-worker.js  history.js  integrity.js  job-tracker.js  logger.js  metrics.js  monitor.js  nsfw-client.js  nsfw.js  paths.js  proxy.js  rescue.js  resilience.js  runtime.js  secret.js  security.js  share.js  state-migration.js  stories.js  thumbs.js  updater.js  url-resolver.js  web-auth.js  (+1 more)
tests/: account-rebind.test.js  accounts-reload.test.js  ai.health.test.js  ai.lazy-sharp.test.js  ai.routes.test.js  ai.safe-route.test.js  api-resilience.test.js  backup.credentials.test.js  backup.encryption.test.js  backup.providers.dropbox.test.js  backup.providers.ftp.test.js  backup.providers.gdrive.test.js  backup.providers.local.test.js  backup.providers.s3.test.js  backup.queue.test.js  cluster.config-sync.test.js  cluster.dedup.test.js  cluster.discovery.test.js  cluster.e2e.test.js  cluster.failover.test.js  cluster.handshake.test.js  cluster.hmac.test.js  cluster.identity.test.js  cluster.peers.test.js  cluster.proxy.test.js  cluster.relay.test.js  cluster.sweep.test.js  cluster.sync.test.js  cluster.tokens.test.js  config-manager.test.js  db-federated-gallery.test.js  db.test.js  disk-rotator.test.js  downloader-utils.test.js  forwarder.test.js  group-name.test.js  hash-worker.test.js  integrity.test.js  job-tracker-multi-client.test.js  job-tracker.test.js  (+23 more)
(+255 files in other folders)
